--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@reduxjs/toolkit": "1.5.0",
+    "axios": "^0.25.0",
     "graphql": "^16.3.0",
     "next": "12.0.2",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
@@ -57,7 +60,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 3777",
+    "dev": "next dev -p 3555",
     "start": "next start"
   },
   "version": "1.0.0"
